manifests/traefik-dashboard/traefik-dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-ingress
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.tyrongabriel.com`)
      kind: Rule
      services:
        - name: traefik-dashboard
          port: 9000
          namespace: kube-system
      middlewares:
        - name: k3s-kubernetes-outpost
          namespace: authentik # Replace with the actual namespace of your Authentik middleware
  tls:
    #certResolver: cloudflare-issuer # Use the cert resolver from your annotations
    domains:
      - main: traefik.tyrongabriel.com
        sans:
          - traefik.tyrongabriel.com
